Adição do layout dos requisitos bonus

--- a/1-interfaces-e-aplicacoes-front-end/00-projetos/03-DrivenEats/index.html
+++ b/1-interfaces-e-aplicacoes-front-end/00-projetos/03-DrivenEats/index.html
@@ -108,12 +108,35 @@
                 </div>
             </div>
         </div>
-
     </div>
 
     <footer>
-        <button class="">Selecione os 3 itens para fechar o pedido</button>
+        <button class="">Selecione os 3 itens<br>para fechar o pedido</button>
     </footer>
+
+    <div class="confirmation hide">
+        <div>
+            <p><strong>Confirme seu pedido</strong></p>
+            <div>
+                <p>Caldo</p>
+                <p>10,00</p>
+            </div>
+            <div>
+                <p>Caldo</p>
+                <p>10,00</p>
+            </div>
+            <div>
+                <p>Caldo</p>
+                <p>10,00</p>
+            </div>
+            <div>
+                <p><strong>TOTAL</strong></p>
+                <p><strong>R$ 30,00</strong></p>
+            </div>
+            <button><strong>Tudo certo, pode pedir!</strong></button>
+            <button><strong>Cancelar</strong></button>
+        </div>
+    </div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
