Alteração dos itens do cardápio para os definitivos

--- a/1-interfaces-e-aplicacoes-front-end/00-projetos/03-DrivenEats/index.html
+++ b/1-interfaces-e-aplicacoes-front-end/00-projetos/03-DrivenEats/index.html
@@ -23,28 +23,44 @@
             <div class="options">
                 <div class="">
                     <img src="./img/foods/caldo.png" alt="">
-                    <h3>Caldos</h3>
+                    <h3>Caldo</h3>
                     <p>Vários sabores disponíveis</p>
-                    <p>R$ 10,00</p>
+                    <p>R$ 15,00</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div>
-                    <img src="./img/foods/caldo.png" alt="">
-                    <h3>Caldos</h3>
-                    <p>Delicioso caldo junino, diversas</p>
+                <div class="">
+                    <img src="./img/foods/espetinho.jpg" alt="">
+                    <h3>Espetinho</h3>
+                    <p>Bovino, frango ou linguiça</p>
                     <p>R$ 10,00</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
+                </div><div class="">
+                    <img src="./img/foods/cachorro-quente.webp" alt="">
+                    <h3>Cachorro-Quente</h3>
+                    <p>Pão, salsicha, molho de tomate, milho...</p>
+                    <p>R$ 8,00</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div>
-                    <img src="./img/foods/caldo.png" alt="">
-                    <h3>Caldos</h3>
-                    <p>Delicioso caldo junino, diversas opções muito saborosas</p>
-                    <p>R$ 10,00</p>
+                <div class="">
+                    <img src="./img/foods/milho-assado.jpg" alt="">
+                    <h3>Milho Assado</h3>
+                    <p>Assado na manteiga temperada</p>
+                    <p>R$ 6,00</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div>
-                    <img src="./img/foods/caldo.png" alt="">
-                    <h3>Caldos</h3>
-                    <p>Delicioso caldo junino, diversas opções</p>
-                    <p>R$ 10,00</p>
+                <div class="">
+                    <img src="./img/foods/canjiquinha.jpg" alt="">
+                    <h3>Canjiquinha</h3>
+                    <p>Com costelinha de porco e bacon</p>
+                    <p>R$ 12,00</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
+                </div>
+                <div class="">
+                    <img src="./img/foods/pamonha.webp" alt="">
+                    <h3>Pamonha</h3>
+                    <p>De sal de doce ou temperada</p>
+                    <p>R$ 7,00</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
         </div>
@@ -53,28 +69,28 @@
             <h2>Agora, sua bebida</h2>
             <div class="options">
                 <div>
-                    <img src="./img/foods/caldo.png" alt="">
-                    <h3>Caldos</h3>
-                    <p>Delicioso caldo junino, diversas opções</p>
-                    <p>R$ 10,00</p>
+                    <img src="./img/drinks/quentao.jpg" alt="">
+                    <h3>Quentão</h3>
+                    <p>Para se aquecer nesse frio!</p>
+                    <p>R$ 7,00</p>
                 </div>
                 <div>
-                    <img src="./img/foods/caldo.png" alt="">
-                    <h3>Caldos</h3>
-                    <p>Delicioso caldo junino, diversas</p>
-                    <p>R$ 10,00</p>
+                    <img src="./img/drinks/suco-milho.jpg" alt="">
+                    <h3>Suco de Milho</h3>
+                    <p>Milho em seu estado líquido</p>
+                    <p>R$ 4,00</p>
                 </div>
                 <div>
-                    <img src="./img/foods/caldo.png" alt="">
-                    <h3>Caldos</h3>
-                    <p>Delicioso caldo junino, diversas opções muito saborosas</p>
-                    <p>R$ 10,00</p>
+                    <img src="./img/drinks/vinho-quente.webp" alt="">
+                    <h3>Vinho Quente</h3>
+                    <p>Um pouco mais quente que o Sol</p>
+                    <p>R$ 6,00</p>
                 </div>
                 <div>
-                    <img src="./img/foods/caldo.png" alt="">
-                    <h3>Caldos</h3>
-                    <p>Delicioso caldo junino, diversas opções</p>
-                    <p>R$ 10,00</p>
+                    <img src="./img/drinks/chocolate-quente.webp" alt="">
+                    <h3>Chocolate Quente</h3>
+                    <p>Se dá pra esquentar, a gente esquenta!</p>
+                    <p>R$ 5,00</p>
                 </div>
             </div>
         </div>
@@ -83,28 +99,40 @@
             <h2>Por fim, sua sobremesa</h2>
             <div class="options">
                 <div>
-                    <img src="./img/foods/caldo.png" alt="">
-                    <h3>Caldos</h3>
-                    <p>Delicioso caldo junino, diversas opções</p>
-                    <p>R$ 10,00</p>
+                    <img src="./img/desserts/cural.jpg" alt="">
+                    <h3>Curau</h3>
+                    <p>Quem chama de canjica é louco!</p>
+                    <p>R$ 6,00</p>
                 </div>
                 <div>
-                    <img src="./img/foods/caldo.png" alt="">
-                    <h3>Caldos</h3>
-                    <p>Delicioso caldo junino, diversas</p>
-                    <p>R$ 10,00</p>
+                    <img src="./img/desserts/pe-de-moleque.webp" alt="">
+                    <h3>Pé de Moleque</h3>
+                    <p>Ingredientes de 1ª qualidade</p>
+                    <p>R$ 3,50</p>
                 </div>
                 <div>
-                    <img src="./img/foods/caldo.png" alt="">
-                    <h3>Caldos</h3>
-                    <p>Delicioso caldo junino, diversas opções muito saborosas</p>
-                    <p>R$ 10,00</p>
+                    <img src="./img/desserts/maca-do-amor.webp" alt="">
+                    <h3>Maçã do Amor</h3>
+                    <p>Maçã, açúcar, palito de picolé</p>
+                    <p>R$ 4,00</p>
                 </div>
                 <div>
-                    <img src="./img/foods/caldo.png" alt="">
-                    <h3>Caldos</h3>
-                    <p>Delicioso caldo junino, diversas opções</p>
-                    <p>R$ 10,00</p>
+                    <img src="./img/desserts/arroz-doce.jpg" alt="">
+                    <h3>Arroz Doce</h3>
+                    <p>Nas opções com e sem chocolate</p>
+                    <p>R$ 5,50</p>
+                </div>
+                <div>
+                    <img src="./img/desserts/pacoca.jpg" alt="">
+                    <h3>Paçoca</h3>
+                    <p>3 un, é impossível comer só uma!</p>
+                    <p>R$ 3,00</p>
+                </div>
+                <div>
+                    <img src="./img/desserts/pipoca-doce.jpg" alt="">
+                    <h3>Pipoca Doce</h3>
+                    <p>Diferentes cores mas o mesmo sabor</p>
+                    <p>R$ 2,50</p>
                 </div>
             </div>
         </div>
