Finalização do projeto 03 - DrivenEats cumprindo todos os requisitos

--- a/1-interfaces-e-aplicacoes-front-end/00-projetos/03-DrivenEats/index.html
+++ b/1-interfaces-e-aplicacoes-front-end/00-projetos/03-DrivenEats/index.html
@@ -18,151 +18,162 @@
     </header>
 
     <div class="menu">
-        <div class="category">
+        <div class="category dishes">
             <h2>Primeiro, seu prato</h2>
             <div class="options">
-                <div class="">
-                    <img src="./img/foods/caldo.png" alt="">
+                <div onclick="selectDish('.dish1')" class="dish1">
+                    <img src="./img/dishes/caldo.png" alt="">
                     <h3>Caldo</h3>
                     <p>Vários sabores disponíveis</p>
-                    <p>R$ 15,00</p>
+                    <p>R$ <span>15,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="">
-                    <img src="./img/foods/espetinho.jpg" alt="">
+                <div onclick="selectDish('.dish2')" class="dish2">
+                    <img src="./img/dishes/espetinho.jpg" alt="">
                     <h3>Espetinho</h3>
                     <p>Bovino, frango ou linguiça</p>
-                    <p>R$ 10,00</p>
+                    <p>R$ <span>10,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
-                </div><div class="">
-                    <img src="./img/foods/cachorro-quente.webp" alt="">
+                </div>
+                <div onclick="selectDish('.dish3')" class="dish3">
+                    <img src="./img/dishes/cachorro-quente.webp" alt="">
                     <h3>Cachorro-Quente</h3>
                     <p>Pão, salsicha, molho de tomate, milho...</p>
-                    <p>R$ 8,00</p>
+                    <p>R$ <span>8,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="">
-                    <img src="./img/foods/milho-assado.jpg" alt="">
+                <div onclick="selectDish('.dish4')" class="dish4">
+                    <img src="./img/dishes/milho-assado.jpg" alt="">
                     <h3>Milho Assado</h3>
                     <p>Assado na manteiga temperada</p>
-                    <p>R$ 6,00</p>
+                    <p>R$ <span>6,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="">
-                    <img src="./img/foods/canjiquinha.jpg" alt="">
+                <div onclick="selectDish('.dish5')" class="dish5">
+                    <img src="./img/dishes/canjiquinha.jpg" alt="">
                     <h3>Canjiquinha</h3>
                     <p>Com costelinha de porco e bacon</p>
-                    <p>R$ 12,00</p>
+                    <p>R$ <span>12,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div class="">
-                    <img src="./img/foods/pamonha.webp" alt="">
+                <div onclick="selectDish('.dish6')" class="dish6">
+                    <img src="./img/dishes/pamonha.webp" alt="">
                     <h3>Pamonha</h3>
                     <p>De sal de doce ou temperada</p>
-                    <p>R$ 7,00</p>
+                    <p>R$ <span>7,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
         </div>
 
-        <div class="category">
+        <div class="category drinks">
             <h2>Agora, sua bebida</h2>
             <div class="options">
-                <div>
+                <div onclick="selectDrink('.drink1')" class="drink1">
                     <img src="./img/drinks/quentao.jpg" alt="">
                     <h3>Quentão</h3>
                     <p>Para se aquecer nesse frio!</p>
-                    <p>R$ 7,00</p>
+                    <p>R$ <span>7,00</span></p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div>
+                <div onclick="selectDrink('.drink2')" class="drink2">
                     <img src="./img/drinks/suco-milho.jpg" alt="">
                     <h3>Suco de Milho</h3>
                     <p>Milho em seu estado líquido</p>
-                    <p>R$ 4,00</p>
+                    <p>R$ <span>4,00</span></p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div>
+                <div onclick="selectDrink('.drink3')" class="drink3">
                     <img src="./img/drinks/vinho-quente.webp" alt="">
                     <h3>Vinho Quente</h3>
                     <p>Um pouco mais quente que o Sol</p>
-                    <p>R$ 6,00</p>
+                    <p>R$ <span>6,00</span></p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div>
+                <div onclick="selectDrink('.drink4')" class="drink4">
                     <img src="./img/drinks/chocolate-quente.webp" alt="">
                     <h3>Chocolate Quente</h3>
                     <p>Se dá pra esquentar, a gente esquenta!</p>
-                    <p>R$ 5,00</p>
+                    <p>R$ <span>5,00</span></p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
         </div>
 
-        <div class="category">
+        <div class="category desserts">
             <h2>Por fim, sua sobremesa</h2>
             <div class="options">
-                <div>
+                <div onclick="selectDessert('.dessert1')" class="dessert1">
                     <img src="./img/desserts/cural.jpg" alt="">
                     <h3>Curau</h3>
                     <p>Quem chama de canjica é louco!</p>
-                    <p>R$ 6,00</p>
+                    <p>R$ <span>6,00</span></p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div>
+                <div onclick="selectDessert('.dessert2')" class="dessert2">
                     <img src="./img/desserts/pe-de-moleque.webp" alt="">
                     <h3>Pé de Moleque</h3>
                     <p>Ingredientes de 1ª qualidade</p>
-                    <p>R$ 3,50</p>
+                    <p>R$ <span>3,50</span></p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div>
+                <div onclick="selectDessert('.dessert3')" class="dessert3">
                     <img src="./img/desserts/maca-do-amor.webp" alt="">
                     <h3>Maçã do Amor</h3>
                     <p>Maçã, açúcar, palito de picolé</p>
-                    <p>R$ 4,00</p>
+                    <p>R$ <span>4,00</span></p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div>
+                <div onclick="selectDessert('.dessert4')" class="dessert4">
                     <img src="./img/desserts/arroz-doce.jpg" alt="">
                     <h3>Arroz Doce</h3>
                     <p>Nas opções com e sem chocolate</p>
-                    <p>R$ 5,50</p>
+                    <p>R$ <span>5,50</span></p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div>
+                <div onclick="selectDessert('.dessert5')" class="dessert5">
                     <img src="./img/desserts/pacoca.jpg" alt="">
                     <h3>Paçoca</h3>
                     <p>3 un, é impossível comer só uma!</p>
-                    <p>R$ 3,00</p>
+                    <p>R$ <span>3,00</span></p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div>
+                <div onclick="selectDessert('.dessert6')" class="dessert6">
                     <img src="./img/desserts/pipoca-doce.jpg" alt="">
                     <h3>Pipoca Doce</h3>
                     <p>Diferentes cores mas o mesmo sabor</p>
-                    <p>R$ 2,50</p>
+                    <p>R$ <span>2,50</span></p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
         </div>
     </div>
 
     <footer>
-        <button class="">Selecione os 3 itens<br>para fechar o pedido</button>
+        <button onclick="checkRequest()" class="c-btn">Selecione os 3 itens<br>para fechar o pedido</button>
     </footer>
 
-    <div class="confirmation hide">
+    <div class="confirmation is-disabled">
         <div>
             <p><strong>Confirme seu pedido</strong></p>
-            <div>
+            <div class="confirmation--food">
                 <p>Caldo</p>
                 <p>10,00</p>
             </div>
-            <div>
+            <div class="confirmation--drink">
                 <p>Caldo</p>
                 <p>10,00</p>
             </div>
-            <div>
+            <div class="confirmation--dessert">
                 <p>Caldo</p>
                 <p>10,00</p>
             </div>
-            <div>
+            <div class="confirmation--total">
                 <p><strong>TOTAL</strong></p>
-                <p><strong>R$ 30,00</strong></p>
+                <p><strong>R$ <span>30,00</span></strong></p>
             </div>
-            <button><strong>Tudo certo, pode pedir!</strong></button>
-            <button><strong>Cancelar</strong></button>
+            <button onclick="finishRequest()" class="c-btn"><strong>Tudo certo, pode pedir!</strong></button>
+            <button onclick="checkRequest()" class="c-btn"><strong>Cancelar</strong></button>
         </div>
     </div>
 
