Utilização no projeto dos conceitos aprendidos na aula de sexta-feira 12/08 (this, variáveis globais)

--- a/index.html
+++ b/index.html
@@ -21,42 +21,42 @@
         <div class="category dishes">
             <h2>Primeiro, seu prato</h2>
             <div class="options">
-                <div onclick="selectDish('.dish1')" class="dish1">
+                <div onclick="selectDish(this)">
                     <img src="./img/dishes/caldo.png" alt="">
                     <h3>Caldo</h3>
                     <p>Vários sabores disponíveis</p>
                     <p>R$ <span>15,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDish('.dish2')" class="dish2">
+                <div onclick="selectDish(this)">
                     <img src="./img/dishes/espetinho.jpg" alt="">
                     <h3>Espetinho</h3>
                     <p>Bovino, frango ou linguiça</p>
                     <p>R$ <span>10,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDish('.dish3')" class="dish3">
+                <div onclick="selectDish(this)">
                     <img src="./img/dishes/cachorro-quente.webp" alt="">
                     <h3>Cachorro-Quente</h3>
                     <p>Pão, salsicha, molho de tomate, milho...</p>
                     <p>R$ <span>8,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDish('.dish4')" class="dish4">
+                <div onclick="selectDish(this)">
                     <img src="./img/dishes/milho-assado.jpg" alt="">
                     <h3>Milho Assado</h3>
                     <p>Assado na manteiga temperada</p>
                     <p>R$ <span>6,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDish('.dish5')" class="dish5">
+                <div onclick="selectDish(this)">
                     <img src="./img/dishes/canjiquinha.jpg" alt="">
                     <h3>Canjiquinha</h3>
                     <p>Com costelinha de porco e bacon</p>
                     <p>R$ <span>12,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDish('.dish6')" class="dish6">
+                <div onclick="selectDish(this)">
                     <img src="./img/dishes/pamonha.webp" alt="">
                     <h3>Pamonha</h3>
                     <p>De sal de doce ou temperada</p>
@@ -69,28 +69,28 @@
         <div class="category drinks">
             <h2>Agora, sua bebida</h2>
             <div class="options">
-                <div onclick="selectDrink('.drink1')" class="drink1">
+                <div onclick="selectDrink(this)">
                     <img src="./img/drinks/quentao.jpg" alt="">
                     <h3>Quentão</h3>
                     <p>Para se aquecer nesse frio!</p>
                     <p>R$ <span>7,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDrink('.drink2')" class="drink2">
+                <div onclick="selectDrink(this)">
                     <img src="./img/drinks/suco-milho.jpg" alt="">
                     <h3>Suco de Milho</h3>
                     <p>Milho em seu estado líquido</p>
                     <p>R$ <span>4,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDrink('.drink3')" class="drink3">
+                <div onclick="selectDrink(this)">
                     <img src="./img/drinks/vinho-quente.webp" alt="">
                     <h3>Vinho Quente</h3>
                     <p>Um pouco mais quente que o Sol</p>
                     <p>R$ <span>6,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDrink('.drink4')" class="drink4">
+                <div onclick="selectDrink(this)">
                     <img src="./img/drinks/chocolate-quente.webp" alt="">
                     <h3>Chocolate Quente</h3>
                     <p>Se dá pra esquentar, a gente esquenta!</p>
@@ -103,42 +103,42 @@
         <div class="category desserts">
             <h2>Por fim, sua sobremesa</h2>
             <div class="options">
-                <div onclick="selectDessert('.dessert1')" class="dessert1">
+                <div onclick="selectDessert(this)">
                     <img src="./img/desserts/cural.jpg" alt="">
                     <h3>Curau</h3>
                     <p>Quem chama de canjica é louco!</p>
                     <p>R$ <span>6,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDessert('.dessert2')" class="dessert2">
+                <div onclick="selectDessert(this)">
                     <img src="./img/desserts/pe-de-moleque.webp" alt="">
                     <h3>Pé de Moleque</h3>
                     <p>Ingredientes de 1ª qualidade</p>
                     <p>R$ <span>3,50</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDessert('.dessert3')" class="dessert3">
+                <div onclick="selectDessert(this)">
                     <img src="./img/desserts/maca-do-amor.webp" alt="">
                     <h3>Maçã do Amor</h3>
                     <p>Maçã, açúcar, palito de picolé</p>
                     <p>R$ <span>4,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDessert('.dessert4')" class="dessert4">
+                <div onclick="selectDessert(this)">
                     <img src="./img/desserts/arroz-doce.jpg" alt="">
                     <h3>Arroz Doce</h3>
                     <p>Nas opções com e sem chocolate</p>
                     <p>R$ <span>5,50</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDessert('.dessert5')" class="dessert5">
+                <div onclick="selectDessert(this)">
                     <img src="./img/desserts/pacoca.jpg" alt="">
                     <h3>Paçoca</h3>
                     <p>3 un, é impossível comer só uma!</p>
                     <p>R$ <span>3,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
-                <div onclick="selectDessert('.dessert6')" class="dessert6">
+                <div onclick="selectDessert(this)">
                     <img src="./img/desserts/pipoca-doce.jpg" alt="">
                     <h3>Pipoca Doce</h3>
                     <p>Diferentes cores mas o mesmo sabor</p>
