Alterações no projeto para diminuir repetição de código e deixá-lo mais semântico. Adição dos elementos HTML pelo script.js e não diretamente pelo index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/icon/uber-eats-logo.png" type="image/icon type">
     <title>DrivenEats</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./sass/reset.css">
+    <link rel="stylesheet" href="./sass/style.css">
 </head>
 
 <body>
@@ -18,10 +18,10 @@
     </header>
 
     <div class="menu">
-        <div class="category dishes">
+        <div class="category">
             <h2>Primeiro, seu prato</h2>
-            <div class="options">
-                <div onclick="selectDish(this)">
+            <div class="dishes options">
+                <!-- <div onclick="selectDish(this)">
                     <img src="./img/dishes/caldo.png" alt="">
                     <h3>Caldo</h3>
                     <p>Vários sabores disponíveis</p>
@@ -62,14 +62,14 @@
                     <p>De sal de doce ou temperada</p>
                     <p>R$ <span>7,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
-                </div>
+                </div> -->
             </div>
         </div>
 
-        <div class="category drinks">
+        <div class="category">
             <h2>Agora, sua bebida</h2>
-            <div class="options">
-                <div onclick="selectDrink(this)">
+            <div class="drinks options">
+                <!-- <div onclick="selectDrink(this)">
                     <img src="./img/drinks/quentao.jpg" alt="">
                     <h3>Quentão</h3>
                     <p>Para se aquecer nesse frio!</p>
@@ -96,14 +96,14 @@
                     <p>Se dá pra esquentar, a gente esquenta!</p>
                     <p>R$ <span>5,00</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
-                </div>
+                </div> -->
             </div>
         </div>
 
-        <div class="category desserts">
+        <div class="category">
             <h2>Por fim, sua sobremesa</h2>
-            <div class="options">
-                <div onclick="selectDessert(this)">
+            <div class="desserts options">
+                <!-- <div onclick="selectDessert(this)">
                     <img src="./img/desserts/cural.jpg" alt="">
                     <h3>Curau</h3>
                     <p>Quem chama de canjica é louco!</p>
@@ -144,7 +144,7 @@
                     <p>Diferentes cores mas o mesmo sabor</p>
                     <p>R$ <span>2,50</span></p>
                     <ion-icon name="checkmark-circle"></ion-icon>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -154,9 +154,9 @@
     </footer>
 
     <div class="confirmation is-disabled">
-        <div>
+        <!-- <div>
             <p><strong>Confirme seu pedido</strong></p>
-            <div class="confirmation--food">
+            <div class="confirmation--dish">
                 <p>Caldo</p>
                 <p>10,00</p>
             </div>
@@ -174,7 +174,7 @@
             </div>
             <button onclick="finishRequest()" class="c-btn"><strong>Tudo certo, pode pedir!</strong></button>
             <button onclick="checkRequest()" class="c-btn"><strong>Cancelar</strong></button>
-        </div>
+        </div> -->
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
